// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`after-close-tag.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<ion-list class="timeline" appScrollItem>
  @for (let item of items; index as i; trackBy: trackByFn) {
    <app-tweet-item></app-tweet-item>@if (
      areaId &&
      canTweet
    ) {
      <ion-item class="recommend-trust-up" lines="full"></ion-item>
    }
  }
</ion-list>

<ng-container *ngIf="
      areaId &&
      canTweet
">
<ion-item class="recommend-trust-up" lines="full"></ion-item>
</ng-container>


@if (
      areaId &&
      canTweet
    ) {
      <ion-item class="recommend-trust-up" lines="full"></ion-item>
    }

=====================================output=====================================
<ion-list class="timeline" appScrollItem>
  @for (let item of items; index as i; trackBy: trackByFn) {
    <app-tweet-item></app-tweet-item>
    @if (areaId && canTweet) {
      <ion-item class="recommend-trust-up" lines="full"></ion-item>
    }
  }
</ion-list>

<ng-container *ngIf="areaId && canTweet">
  <ion-item class="recommend-trust-up" lines="full"></ion-item>
</ng-container>

@if (areaId && canTweet) {
  <ion-item class="recommend-trust-up" lines="full"></ion-item>
}

================================================================================
`;

exports[`boundary.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
@boundary {
  <app-risky-component />
} @error {
  <p>Something went wrong!</p>
}

@boundary {
  <app-risky-component />
} @error {
  <p>Error occurred: {{ $error.message }}</p>
}

@boundary {
  <app-flaky-component />
} @error {
  <p>Loading failed.</p>
  <button (click)="$reset()">Try again</button>
}

@boundary {
  <app-risky-component />
} @error {
  <app-error-fallback [error]="err" />
}

@boundary {
  <app-risky-component />
} @error (let err; retry = $reset; when isNetworkError(err)) {
  <app-network-error [error]="err" />
  <button (click)="retry()">Retry</button>
} @error {
  <app-generic-error />
}

@boundary {
  <app-chart-dashboard />
} @error (let err; reset = $reset; when isRenderError(err)) {
  <p>Network issue. Check your connection.</p>
  <button (click)="reset()">Retry</button>
} @error {
  <p>An unexpected error occurred: {{ $error.message }}</p>
}

@boundary {
  <complex-chart [data]="data"/>
} @error (let err = $error; let r = $reset) {
  <p>Failed to load chart: {{err.message}}</p>
  <button (click)="r()">Retry</button>
}

@boundary {
  Outer Main
  @boundary {
    Inner Main
  } @error {
    Inner Fallback
  }
} @error {
  Outer Fallback
}

@defer {
  @boundary {
    <app-c1/>
  } @error {
    <span>Render error</span>
  }
} @error {
  <span>Load error</span>
}

=====================================output=====================================
@boundary {
  <app-risky-component />
} @error {
  <p>Something went wrong!</p>
}

@boundary {
  <app-risky-component />
} @error {
  <p>Error occurred: {{ $error.message }}</p>
}

@boundary {
  <app-flaky-component />
} @error {
  <p>Loading failed.</p>
  <button (click)="$reset()">Try again</button>
}

@boundary {
  <app-risky-component />
} @error {
  <app-error-fallback [error]="err" />
}

@boundary {
  <app-risky-component />
} @error (let err; retry = $reset; when isNetworkError(err)) {
  <app-network-error [error]="err" />
  <button (click)="retry()">Retry</button>
} @error {
  <app-generic-error />
}

@boundary {
  <app-chart-dashboard />
} @error (let err; reset = $reset; when isRenderError(err)) {
  <p>Network issue. Check your connection.</p>
  <button (click)="reset()">Retry</button>
} @error {
  <p>An unexpected error occurred: {{ $error.message }}</p>
}

@boundary {
  <complex-chart [data]="data" />
} @error (let err = $error; let r = $reset) {
  <p>Failed to load chart: {{ err.message }}</p>
  <button (click)="r()">Retry</button>
}

@boundary {
  Outer Main
  @boundary {
    Inner Main
  } @error {
    Inner Fallback
  }
} @error {
  Outer Fallback
}

@defer {
  @boundary {
    <app-c1 />
  } @error {
    <span>Render error</span>
  }
} @error {
  <span>Load error</span>
}

================================================================================
`;

exports[`boundary-error-parameters.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
@boundary {
  <app-risky-component />
} @error (let err; retry 

= $reset; when 
isNetworkError(err)) {
  <app-network-error [error]="err" />
  <button (click)="retry()">Retry</button>
} @error {
  <app-generic-error />
}

@boundary {
  <app-chart-dashboard />
} @error (let
err; reset
=
$reset; when
isRenderError(err)) {
  <p>Network issue. Check your connection.</p>
  <button (click)="reset()">Retry</button>
} @error {
  <p>An unexpected error occurred: {{$error.message}}</p>
}

@boundary {
  <complex-chart [data]="data"/>
} @error (let err=$error; let r=$reset) {
  <p>Failed to load chart: {{err.message}}</p>
  <button (click)="r()">Retry</button>
}

@boundary {
  Main
} @error (let err; when err.message === '404') {
  Not Found
}

@boundary {
  Main
} @error (err = $error, retry
=
$reset) {
  <button (click)="retry()">Retry</button>
}

=====================================output=====================================
@boundary {
  <app-risky-component />
} @error (let err; retry = $reset; when isNetworkError(err)) {
  <app-network-error [error]="err" />
  <button (click)="retry()">Retry</button>
} @error {
  <app-generic-error />
}

@boundary {
  <app-chart-dashboard />
} @error (let err; reset = $reset; when isRenderError(err)) {
  <p>Network issue. Check your connection.</p>
  <button (click)="reset()">Retry</button>
} @error {
  <p>An unexpected error occurred: {{ $error.message }}</p>
}

@boundary {
  <complex-chart [data]="data" />
} @error (let err = $error; let r = $reset) {
  <p>Failed to load chart: {{ err.message }}</p>
  <button (click)="r()">Retry</button>
}

@boundary {
  Main
} @error (let err; when err.message === "404") {
  Not Found
}

@boundary {
  Main
} @error (err = $error, retry = $reset) {
  <button (click)="retry()">Retry</button>
}

================================================================================
`;

exports[`chid.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<span>@if (test) {text}</span>
<div>@if (test) {text}</div>

=====================================output=====================================
<span>
  @if (test) {
    text
  }
</span>
<div>
  @if (test) {
    text
  }
</div>

================================================================================
`;

exports[`content.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<FancyButton [label]="title">
    @content(icon) {
      <span>Icon!</span>
    }
      @content(description) {
        <span>Description text</span>
      }
  <span>Other children</span>
   </FancyButton>

<FancyButton [label]="title">
      @content (items; let item, index) {
        <span>#{{index}}: {{item}}</span>
      }
    </FancyButton>

<FancyList>
            @content (renderHeader; let _) {
              <span>Header Content</span>
            }
          </FancyList>

<FancyTable>
            @content (renderRow; let row, idx, isLast) {
              <span>{{ idx }} - {{ row }} (Last: {{ isLast }})</span>
            }
          </FancyTable>

<DynamicIf [injector]="injector" [cond]="visible">
            @content (children; let result) {
              <child>{{ result }}</child>
            }
          </DynamicIf>

=====================================output=====================================
<FancyButton [label]="title">
  @content (icon) {
    <span>Icon!</span>
  }
  @content (description) {
    <span>Description text</span>
  }
  <span>Other children</span>
</FancyButton>

<FancyButton [label]="title">
  @content (items; let item, index) {
    <span>#{{ index }}: {{ item }}</span>
  }
</FancyButton>

<FancyList>
  @content (renderHeader; let _) {
    <span>Header Content</span>
  }
</FancyList>

<FancyTable>
  @content (renderRow; let row, idx, isLast) {
    <span>{{ idx }} - {{ row }} (Last: {{ isLast }})</span>
  }
</FancyTable>

<DynamicIf [injector]="injector" [cond]="visible">
  @content (children; let result) {
    <child>{{ result }}</child>
  }
</DynamicIf>

================================================================================
`;

exports[`default-never.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
@switch (   cond.kind) {
  @default never;
}

@switch (   cond.kind      ) {
      @default      never      ;
}

@switch (   state.mode) {
   @default never(state);
}

@switch (      state.mode      ) {
      @default      never      (      state      )      ;
}

@switch (   expr) {
   @default never(expr.prop);
}

=====================================output=====================================
@switch (cond.kind) {
  @default never;
}

@switch (cond.kind) {
  @default never;
}

@switch (state.mode) {
  @default never(state);
}

@switch (state.mode) {
  @default never(state);
}

@switch (expr) {
  @default never(expr.prop);
}

================================================================================
`;

exports[`defer.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
@defer (when isCheckedDefer()) {
<app-c1/>
}
@placeholder {
<span>Placeholder</span>
}
@error {
<span>Error</span>
}
@loading(minimum 1s) {
<span>Loading...</span>
}


@defer (on interaction) {
<span>Clicked</span>
}
@placeholder {
<span>Placeholder (click on it!)</span>
}


@defer (on hover) {
<span>Hovered</span>
}
@placeholder {
<span>Placeholder (hover it!)</span>
}


@defer (on idle) {
<span>Browser has reached an idle state</span>
}
@placeholder {
<span>Placeholder</span>
}


@defer (on timer(5s)) {
<span>Visible after 5s</span>
}
@placeholder {
<span>Placeholder</span>
}


@defer (on viewport) {
<app-c2 text="The block entered the viewport"/>
}
@placeholder {
<span>Placeholder</span>
}


@defer (on interaction; prefetch on hover) {
<app-c3/>
}
@placeholder {
<span>Placeholder (hover it, then click on it!)</span>
}


@defer (on interaction; prefetch on hover) {
<app-c3/>
}
@placeholder {
<span>Placeholder (hover it, then click on it!)</span>
}

=====================================output=====================================
@defer (when isCheckedDefer()) {
  <app-c1 />
} @placeholder {
  <span>Placeholder</span>
} @error {
  <span>Error</span>
} @loading (minimum 1s) {
  <span>Loading...</span>
}

@defer (on interaction) {
  <span>Clicked</span>
} @placeholder {
  <span>Placeholder (click on it!)</span>
}

@defer (on hover) {
  <span>Hovered</span>
} @placeholder {
  <span>Placeholder (hover it!)</span>
}

@defer (on idle) {
  <span>Browser has reached an idle state</span>
} @placeholder {
  <span>Placeholder</span>
}

@defer (on timer(5s)) {
  <span>Visible after 5s</span>
} @placeholder {
  <span>Placeholder</span>
}

@defer (on viewport) {
  <app-c2 text="The block entered the viewport" />
} @placeholder {
  <span>Placeholder</span>
}

@defer (on interaction; prefetch on hover) {
  <app-c3 />
} @placeholder {
  <span>Placeholder (hover it, then click on it!)</span>
}

@defer (on interaction; prefetch on hover) {
  <app-c3 />
} @placeholder {
  <span>Placeholder (hover it, then click on it!)</span>
}

================================================================================
`;

exports[`element-tags.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
@if (true) {<img />}

=====================================output=====================================
@if (true) {
  <img />
}

================================================================================
`;

exports[`for.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<ul>
@for (
            let

            item of items;index as
i;
            trackBy: trackByFn
) {
<li><strong>{{item.name}}</strong></li>
}
@empty {
<span>The collection is empty</span>
}
</ul>


<li *ngFor="
            let

            item of items;index as
i;
            trackBy: trackByFn
"></li>



<ul>
@for (item of collection; track item.id; let index = $index, first = $first; let last = $last, even = $even, odd = $odd; let count = $count) {

<li><strong>{{item.name}}</strong> index={{index}} first={{first}} last={{last}} even={{even}} odd={{odd}} count={{count}}</li>

}
</ul>

<ul>
@for (item of
 emptyCollection; track item.id;) {
<li><strong>{{item.name}}</strong></li>
}
@empty {
  <span>The collection is empty</span>
}
</ul>
<li *ngFor="
item of
 emptyCollection; track item.id;
"></li>

<div>
  @for ( item of items; track item){
  }

  <div *ngFor="item of items; track item"></div>
</div>

<div>
  @for (item of items; let i = $index; track block) {}

  <div *ngFor="item of items; let i = $index; track block"></div>
</div>

<div>
  @for (item of items; let i = $index; let count = $count; track block) {}

  <div *ngFor="item of items; let i = $index; let count = $count; track block"></div>
</div>

=====================================output=====================================
<ul>
  @for (let item of items; index as i; trackBy: trackByFn) {
    <li>
      <strong>{{ item.name }}</strong>
    </li>
  } @empty {
    <span>The collection is empty</span>
  }
</ul>

<li *ngFor="let item of items; index as i; trackBy: trackByFn"></li>

<ul>
  @for (
    item of collection;
    track item.id;
    let index = $index, first = $first;
    let last = $last, even = $even, odd = $odd;
    let count = $count
  ) {
    <li>
      <strong>{{ item.name }}</strong> index={{ index }} first={{
        first
      }}
      last={{ last }} even={{ even }} odd={{ odd }} count={{ count }}
    </li>
  }
</ul>

<ul>
  @for (item of emptyCollection; track item.id) {
    <li>
      <strong>{{ item.name }}</strong>
    </li>
  } @empty {
    <span>The collection is empty</span>
  }
</ul>
<li *ngFor="item of emptyCollection; track item.id"></li>

<div>
  @for (item of items; track item) {}

  <div *ngFor="item of items; track item"></div>
</div>

<div>
  @for (item of items; let i = $index; track block) {}

  <div *ngFor="item of items; let i = $index; track block"></div>
</div>

<div>
  @for (item of items; let i = $index; let count = $count; track block) {}

  <div
    *ngFor="item of items; let i = $index; let count = $count; track block"
  ></div>
</div>

================================================================================
`;

exports[`if.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<h3>&#64;if and &#64;else</h3>
<div>
<input #checkbox type="checkbox" [checked]="isChecked()" (change)="isChecked.set(checkbox.checked)" id="checkbox"/>
</div>
<div>
@if (isChecked()) {
<span>Checked</span>
}
@else {
<span>Not checked</span>
}
</div>

@if (users$   |   async;   as   users) { {{   users.length   }} }
@else if (users$   |   async;   as   users) { {{   users.length   }} }

<div *ngIf="users$   |   async;   as   users">{{   users.length   }}</div>

@else {}


@if (isDev) {}
@else             if (test) {}

@if      (foo(     "quotes")) {}
@else if (foo(     'quotes')) {}

@if ( widthCategory !== undefined && widthCategory >
topStartToSideStartMaxSize) {
<app-component />
}

@if ( widthCategory; as item) {
}

<div *ngIf="widthCategory; as item"></div>

=====================================output=====================================
<h3>&#64;if and &#64;else</h3>
<div>
  <input
    #checkbox
    type="checkbox"
    [checked]="isChecked()"
    (change)="isChecked.set(checkbox.checked)"
    id="checkbox"
  />
</div>
<div>
  @if (isChecked()) {
    <span>Checked</span>
  } @else {
    <span>Not checked</span>
  }
</div>

@if (users$ | async; as users) {
  {{ users.length }}
} @else if (users$ | async; as users) {
  {{ users.length }}
}

<div *ngIf="users$ | async; as users">{{ users.length }}</div>

@else {}

@if (isDev) {
} @else if (test) {}

@if (foo("quotes")) {
} @else if (foo("quotes")) {}

@if (
  widthCategory !== undefined && widthCategory > topStartToSideStartMaxSize
) {
  <app-component />
}

@if (widthCategory; as item) {}

<div *ngIf="widthCategory; as item"></div>

================================================================================
`;

exports[`ignore.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<!-- prettier-ignore -->
@if (condition) {
  Foo
} @else {
  Other
}


@if (condition) {
  Foo
}
<!-- prettier-ignore -->
@else {
  Other
}

=====================================output=====================================
<!-- prettier-ignore -->
@if (condition) {
  Foo
}
@else {
  Other
}

@if (condition) {
  Foo
}
<!-- prettier-ignore -->
@else {
  Other
}

================================================================================
`;

exports[`mix.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
@if (user.isHuman) {
<human-profile [data]="user" />
} @else if (user.isRobot) {
<!-- robot users are rare, so load their profiles lazily -->
@defer {
<robot-profile [data]="user" />
}
} @else {
<p>The profile is unknown!</p>
}

=====================================output=====================================
@if (user.isHuman) {
  <human-profile [data]="user" />
} @else if (user.isRobot) {
  <!-- robot users are rare, so load their profiles lazily -->
  @defer {
    <robot-profile [data]="user" />
  }
} @else {
  <p>The profile is unknown!</p>
}

================================================================================
`;

exports[`multiple-switch-cases.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<!-- https://github.com/angular/angular/pull/66210 -->

@switch (expr) {
  @case (   'one')
  @case (     'two') {
    {{                      oneOrTwo()}}
  }
  @case (                  'three') {
    {{   three()}}
  }
}


@switch (expr) {
  @case      (1)
  @case    (2) {
    {{oneOrTwo()                 }}
  }
  @case     (3     )
  @default {
    {{default()                  }}
  }
}

 <div>
      {{message}}
      @switch (value()) {
        @case (         0)                  @case(1            ) {
                                    case 01
        }
        @case (2) {
          case 2
        }
        @default {
          default
        }
      }
    </div>

@switch(a){@default @case(2){<div>default before case</div>}}
@switch(a){@case(1) @case(2){} @case(3) {<div>3</div>}}

@switch(a){@case(1) @case(2) {<!-- comment -->}}

=====================================output=====================================
<!-- https://github.com/angular/angular/pull/66210 -->

@switch (expr) {
  @case ("one")
  @case ("two") {
    {{ oneOrTwo() }}
  }
  @case ("three") {
    {{ three() }}
  }
}

@switch (expr) {
  @case (1)
  @case (2) {
    {{ oneOrTwo() }}
  }
  @case (3)
  @default {
    {{ default() }}
  }
}

<div>
  {{ message }}
  @switch (value()) {
    @case (0)
    @case (1) {
      case 01
    }
    @case (2) {
      case 2
    }
    @default {
      default
    }
  }
</div>

@switch (a) {
  @default
  @case (2) {
    <div>default before case</div>
  }
}
@switch (a) {
  @case (1)
  @case (2) {}
  @case (3) {
    <div>3</div>
  }
}

@switch (a) {
  @case (1)
  @case (2) {
    <!-- comment -->
  }
}

================================================================================
`;

exports[`switch.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
@switch (radioValue()) {
@case (1) {
<span>Case 1</span>
}
@case (2) {
<span>Case 2</span>
}
@default {
<span>Default case (Not 1 or 2)</span>
}
}


@switch(
  should
.be.formatted
) {
  @case(
  should
.be.formatted) {}
}

=====================================output=====================================
@switch (radioValue()) {
  @case (1) {
    <span>Case 1</span>
  }
  @case (2) {
    <span>Case 2</span>
  }
  @default {
    <span>Default case (Not 1 or 2)</span>
  }
}

@switch (should.be.formatted) {
  @case (should.be.formatted) {}
}

================================================================================
`;

exports[`unclosed.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
@empty{}

@else {}

=====================================output=====================================
@empty {}

@else {}

================================================================================
`;

exports[`with-comment.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<div>
  <!-- comment -->
  <span>Not checked</span>
</div>


<!-- comment -->
@if (isChecked()) {
<span>
  Checked
  <!-- comment -->
</span>
} <!-- comment -->
@else {
<span>Not checked</span>
}
<!-- comment -->

=====================================output=====================================
<div>
  <!-- comment -->
  <span>Not checked</span>
</div>

<!-- comment -->
@if (isChecked()) {
  <span>
    Checked
    <!-- comment -->
  </span>
}
<!-- comment -->
@else {
  <span>Not checked</span>
}
<!-- comment -->

================================================================================
`;
